# TheiaSfM

./: .gitmodules  CMakeLists.txt
applications/: CMakeLists.txt
libraries/: CMakeLists.txt  flann.patch  rocksdb.patch  vlfeat.patch
src/theia/: CMakeLists.txt
src/theia/io/: bundler_file_reader.cc  read_calibration.cc
src/theia/sfm/: feature_extractor_and_matcher.cc  feature_extractor_and_matcher.h
